--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
 
     width: 100vw;
-    height: 100dvh;
+    min-height: 100dvh;
 
     font-size: 62.5%;
 }
@@ -35,6 +35,7 @@ body {
     border: none;
     padding: 20px 20px 5px 20px;
     margin: auto;
+    margin-bottom: 50px;
     width: 80%;
     max-width: 600px;
     height: auto;
